// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component supports checkbox 1`] = `
"<div
  class=\\"mdc-checkbox mdc-checkbox--upgraded\\"
>
  <input
    class=\\"mdc-checkbox__native-control\\"
    type=\\"checkbox\\"
  />
  <div
    class=\\"mdc-checkbox__background\\"
  >
    <svg
      class=\\"mdc-checkbox__checkmark\\"
      viewBox=\\"0 0 24 24\\"
    >
      <path
        class=\\"mdc-checkbox__checkmark-path\\"
        d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
        fill=\\"none\\"
      />
    </svg>
    <div
      class=\\"mdc-checkbox__mixedmark\\"
    />
  </div>
  <div
    class=\\"mdc-checkbox__ripple\\"
  />
</div>"
`;

exports[`Checkbox component supports checkbox 2`] = `
"<div
  class=\\"mdc-checkbox mdc-checkbox--disabled baz mdc-checkbox--upgraded\\"
>
  <input
    class=\\"mdc-checkbox__native-control\\"
    disabled=\\"\\"
    type=\\"checkbox\\"
  />
  <div
    class=\\"mdc-checkbox__background\\"
  >
    <svg
      class=\\"mdc-checkbox__checkmark\\"
      viewBox=\\"0 0 24 24\\"
    >
      <path
        class=\\"mdc-checkbox__checkmark-path\\"
        d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
        fill=\\"none\\"
      />
    </svg>
    <div
      class=\\"mdc-checkbox__mixedmark\\"
    />
  </div>
  <div
    class=\\"mdc-checkbox__ripple\\"
  />
</div>"
`;

exports[`Checkbox component supports checkbox 3`] = `
"<div
  class=\\"mdc-form-field\\"
>
  <div
    class=\\"mdc-checkbox mdc-checkbox--selected mdc-checkbox--upgraded\\"
  >
    <input
      checked=\\"\\"
      class=\\"mdc-checkbox__native-control\\"
      id=\\"foo\\"
      type=\\"checkbox\\"
    />
    <div
      class=\\"mdc-checkbox__background\\"
    >
      <svg
        class=\\"mdc-checkbox__checkmark\\"
        viewBox=\\"0 0 24 24\\"
      >
        <path
          class=\\"mdc-checkbox__checkmark-path\\"
          d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
          fill=\\"none\\"
        />
      </svg>
      <div
        class=\\"mdc-checkbox__mixedmark\\"
      />
    </div>
    <div
      class=\\"mdc-checkbox__ripple\\"
    />
  </div>
  <label
    for=\\"foo\\"
  >
    bar
  </label>
</div>"
`;

exports[`Checkbox component supports checkbox 4`] = `
"<div
  class=\\"mdc-form-field baz\\"
>
  <div
    class=\\"mdc-checkbox mdc-checkbox--upgraded\\"
  >
    <input
      aria-checked=\\"mixed\\"
      class=\\"mdc-checkbox__native-control\\"
      type=\\"checkbox\\"
    />
    <div
      class=\\"mdc-checkbox__background\\"
    >
      <svg
        class=\\"mdc-checkbox__checkmark\\"
        viewBox=\\"0 0 24 24\\"
      >
        <path
          class=\\"mdc-checkbox__checkmark-path\\"
          d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
          fill=\\"none\\"
        />
      </svg>
      <div
        class=\\"mdc-checkbox__mixedmark\\"
      />
    </div>
    <div
      class=\\"mdc-checkbox__ripple\\"
    />
  </div>
  <label>
    bar
  </label>
</div>"
`;

exports[`Checkbox component supports checkbox 5`] = `
"<div
  class=\\"mdc-form-field baz\\"
>
  <div
    class=\\"mdc-checkbox mdc-checkbox--selected mdc-checkbox--upgraded\\"
  >
    <input
      checked=\\"\\"
      class=\\"mdc-checkbox__native-control\\"
      id=\\"foo\\"
      type=\\"checkbox\\"
    />
    <div
      class=\\"mdc-checkbox__background\\"
    >
      <svg
        class=\\"mdc-checkbox__checkmark\\"
        viewBox=\\"0 0 24 24\\"
      >
        <path
          class=\\"mdc-checkbox__checkmark-path\\"
          d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
          fill=\\"none\\"
        />
      </svg>
      <div
        class=\\"mdc-checkbox__mixedmark\\"
      />
    </div>
    <div
      class=\\"mdc-checkbox__ripple\\"
    />
  </div>
  <label
    for=\\"foo\\"
  >
    bar
  </label>
</div>"
`;

exports[`Checkbox component supports touch target 1`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <div
    class=\\"mdc-checkbox mdc-checkbox--touch mdc-checkbox--upgraded\\"
  >
    <input
      class=\\"mdc-checkbox__native-control\\"
      type=\\"checkbox\\"
    />
    <div
      class=\\"mdc-checkbox__background\\"
    >
      <svg
        class=\\"mdc-checkbox__checkmark\\"
        viewBox=\\"0 0 24 24\\"
      >
        <path
          class=\\"mdc-checkbox__checkmark-path\\"
          d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
          fill=\\"none\\"
        />
      </svg>
      <div
        class=\\"mdc-checkbox__mixedmark\\"
      />
    </div>
    <div
      class=\\"mdc-checkbox__ripple\\"
    />
  </div>
</div>"
`;

exports[`Checkbox component supports touch target 2`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-checkbox mdc-checkbox--disabled mdc-checkbox--touch mdc-checkbox--upgraded\\"
  >
    <input
      class=\\"mdc-checkbox__native-control\\"
      disabled=\\"\\"
      type=\\"checkbox\\"
    />
    <div
      class=\\"mdc-checkbox__background\\"
    >
      <svg
        class=\\"mdc-checkbox__checkmark\\"
        viewBox=\\"0 0 24 24\\"
      >
        <path
          class=\\"mdc-checkbox__checkmark-path\\"
          d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
          fill=\\"none\\"
        />
      </svg>
      <div
        class=\\"mdc-checkbox__mixedmark\\"
      />
    </div>
    <div
      class=\\"mdc-checkbox__ripple\\"
    />
  </div>
</div>"
`;

exports[`Checkbox component supports touch target 3`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-checkbox mdc-checkbox--selected mdc-checkbox--touch mdc-checkbox--upgraded\\"
    >
      <input
        checked=\\"\\"
        class=\\"mdc-checkbox__native-control\\"
        id=\\"foo\\"
        type=\\"checkbox\\"
      />
      <div
        class=\\"mdc-checkbox__background\\"
      >
        <svg
          class=\\"mdc-checkbox__checkmark\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            class=\\"mdc-checkbox__checkmark-path\\"
            d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
            fill=\\"none\\"
          />
        </svg>
        <div
          class=\\"mdc-checkbox__mixedmark\\"
        />
      </div>
      <div
        class=\\"mdc-checkbox__ripple\\"
      />
    </div>
    <label
      for=\\"foo\\"
    >
      bar
    </label>
  </div>
</div>"
`;

exports[`Checkbox component supports touch target 4`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-checkbox mdc-checkbox--touch mdc-checkbox--upgraded\\"
    >
      <input
        aria-checked=\\"mixed\\"
        class=\\"mdc-checkbox__native-control\\"
        type=\\"checkbox\\"
      />
      <div
        class=\\"mdc-checkbox__background\\"
      >
        <svg
          class=\\"mdc-checkbox__checkmark\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            class=\\"mdc-checkbox__checkmark-path\\"
            d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
            fill=\\"none\\"
          />
        </svg>
        <div
          class=\\"mdc-checkbox__mixedmark\\"
        />
      </div>
      <div
        class=\\"mdc-checkbox__ripple\\"
      />
    </div>
    <label>
      bar
    </label>
  </div>
</div>"
`;

exports[`Checkbox component supports touch target 5`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-checkbox mdc-checkbox--selected mdc-checkbox--touch mdc-checkbox--upgraded\\"
    >
      <input
        checked=\\"\\"
        class=\\"mdc-checkbox__native-control\\"
        id=\\"foo\\"
        type=\\"checkbox\\"
      />
      <div
        class=\\"mdc-checkbox__background\\"
      >
        <svg
          class=\\"mdc-checkbox__checkmark\\"
          viewBox=\\"0 0 24 24\\"
        >
          <path
            class=\\"mdc-checkbox__checkmark-path\\"
            d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
            fill=\\"none\\"
          />
        </svg>
        <div
          class=\\"mdc-checkbox__mixedmark\\"
        />
      </div>
      <div
        class=\\"mdc-checkbox__ripple\\"
      />
    </div>
    <label
      for=\\"foo\\"
    >
      bar
    </label>
  </div>
</div>"
`;
